第四次提交

--- a/lesson3/lesson_3.ipynb
+++ b/lesson3/lesson_3.ipynb
@@ -19,6 +19,19 @@
     "# print(str(kg_China) + \"g=\" + str(kg) + \"kg\")\n",
     "print(f'{kg_China}g = {kg}kg') # 字串插补\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "姓名 = input(\"请输入姓名：\")\n",
+    "身高 = float(input(\"请输入身高(cm):\"))\n",
+    "体重 = float(input(\"请输入体重(kg):\"))\n",
+    "BMI = round(体重/(身高/100)**2,ndigits=2)\n",
+    "print(f'{姓名}您好:您的BMI值是:{BMI}')"
+   ]
   }
  ],
  "metadata": {
